--- a/MarsPy/mars_news.ipynb
+++ b/MarsPy/mars_news.ipynb
@@ -9,19 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Splinter and BeautifulSoup\n",
     "import requests\n",
+    "import json\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as soup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {
     "scrolled": true
    },
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,26 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a Beautiful Soup object\n",
-    "# Send a GET request to the URL to fetch the page content\n",
-    "response = requests.get(url)\n",
-    "\n",
-    "# Set condition for successful response \n",
-    "if response.status_code == 200:\n",
-    "    \n",
-    "    # Parse the HTML content using BeautifulSoup\n",
-    "    soup = soup(response.text, 'html.parser')\n",
-    "else:\n",
-    "    print(f\"Failed {response.status_code}\")"
+    "soup = soup(browser.html, 'html.parser') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -97,22 +89,22 @@
        "[<div class=\"list_text\">\n",
        " <div class=\"list_date\">November 9, 2022</div>\n",
        " <div class=\"content_title\">NASA's MAVEN Observes Martian Light Show Caused by Major Solar Storm</div>\n",
-       " <div class=\"article_teaser_body\">For the first time in its eight years orbiting Mars, NASAâs MAVEN mission witnessed two different types of ultraviolet aurorae simultaneously, the result of solar storms that began on Aug. 27.</div>\n",
+       " <div class=\"article_teaser_body\">For the first time in its eight years orbiting Mars, NASA’s MAVEN mission witnessed two different types of ultraviolet aurorae simultaneously, the result of solar storms that began on Aug. 27.</div>\n",
        " </div>,\n",
        " <div class=\"list_text\">\n",
        " <div class=\"list_date\">November 1, 2022</div>\n",
        " <div class=\"content_title\">NASA Prepares to Say 'Farewell' to InSight Spacecraft</div>\n",
-       " <div class=\"article_teaser_body\">A closer look at what goes into wrapping up the mission as the spacecraftâs power supply continues to dwindle.</div>\n",
+       " <div class=\"article_teaser_body\">A closer look at what goes into wrapping up the mission as the spacecraft’s power supply continues to dwindle.</div>\n",
        " </div>,\n",
        " <div class=\"list_text\">\n",
        " <div class=\"list_date\">October 28, 2022</div>\n",
        " <div class=\"content_title\">NASA and ESA Agree on Next Steps to Return Mars Samples to Earth</div>\n",
-       " <div class=\"article_teaser_body\">The agencyâs Perseverance rover will establish the first sample depot on Mars.</div>\n",
+       " <div class=\"article_teaser_body\">The agency’s Perseverance rover will establish the first sample depot on Mars.</div>\n",
        " </div>,\n",
        " <div class=\"list_text\">\n",
        " <div class=\"list_date\">October 27, 2022</div>\n",
        " <div class=\"content_title\">NASA's InSight Lander Detects Stunning Meteoroid Impact on Mars</div>\n",
-       " <div class=\"article_teaser_body\">The agencyâs lander felt the ground shake during the impact while cameras aboard the Mars Reconnaissance Orbiter spotted the yawning new crater from space.</div>\n",
+       " <div class=\"article_teaser_body\">The agency’s lander felt the ground shake during the impact while cameras aboard the Mars Reconnaissance Orbiter spotted the yawning new crater from space.</div>\n",
        " </div>,\n",
        " <div class=\"list_text\">\n",
        " <div class=\"list_date\">October 21, 2022</div>\n",
@@ -122,12 +114,12 @@
        " <div class=\"list_text\">\n",
        " <div class=\"list_date\">October 20, 2022</div>\n",
        " <div class=\"content_title\">Why NASA Is Trying To Crash Land on Mars</div>\n",
-       " <div class=\"article_teaser_body\">Like a carâs crumple zone, the experimental SHIELD lander is designed to absorb a hard impact.</div>\n",
+       " <div class=\"article_teaser_body\">Like a car’s crumple zone, the experimental SHIELD lander is designed to absorb a hard impact.</div>\n",
        " </div>,\n",
        " <div class=\"list_text\">\n",
        " <div class=\"list_date\">October 19, 2022</div>\n",
        " <div class=\"content_title\">Curiosity Mars Rover Reaches Long-Awaited Salty Region</div>\n",
-       " <div class=\"article_teaser_body\">After years of climbing, the Mars rover has arrived at a special region believed to have formed as Marsâ climate was drying.</div>\n",
+       " <div class=\"article_teaser_body\">After years of climbing, the Mars rover has arrived at a special region believed to have formed as Mars’ climate was drying.</div>\n",
        " </div>,\n",
        " <div class=\"list_text\">\n",
        " <div class=\"list_date\">October 12, 2022</div>\n",
@@ -137,12 +129,12 @@
        " <div class=\"list_text\">\n",
        " <div class=\"list_date\">October 7, 2022</div>\n",
        " <div class=\"content_title\">NASA's InSight Waits Out Dust Storm</div>\n",
-       " <div class=\"article_teaser_body\">InSightâs team is taking steps to help the solar-powered lander continue operating for as long as possible.</div>\n",
+       " <div class=\"article_teaser_body\">InSight’s team is taking steps to help the solar-powered lander continue operating for as long as possible.</div>\n",
        " </div>,\n",
        " <div class=\"list_text\">\n",
        " <div class=\"list_date\">September 19, 2022</div>\n",
        " <div class=\"content_title\">NASA's InSight 'Hears' Its First Meteoroid Impacts on Mars</div>\n",
-       " <div class=\"article_teaser_body\">The Mars landerâs seismometer has picked up vibrations from four separate impacts in the past two years.</div>\n",
+       " <div class=\"article_teaser_body\">The Mars lander’s seismometer has picked up vibrations from four separate impacts in the past two years.</div>\n",
        " </div>,\n",
        " <div class=\"list_text\">\n",
        " <div class=\"list_date\">September 15, 2022</div>\n",
@@ -152,12 +144,12 @@
        " <div class=\"list_text\">\n",
        " <div class=\"list_date\">September 12, 2022</div>\n",
        " <div class=\"content_title\">NASA to Host Briefing on Perseverance Mars Rover Mission Operations</div>\n",
-       " <div class=\"article_teaser_body\">Members of the mission will discuss the roverâs activities as it gathers samples in an ancient river delta.</div>\n",
+       " <div class=\"article_teaser_body\">Members of the mission will discuss the rover’s activities as it gathers samples in an ancient river delta.</div>\n",
        " </div>,\n",
        " <div class=\"list_text\">\n",
        " <div class=\"list_date\">August 25, 2022</div>\n",
        " <div class=\"content_title\">NASA's Perseverance Makes New Discoveries in Mars' Jezero Crater</div>\n",
-       " <div class=\"article_teaser_body\">The rover found that Jezero Craterâs floor is made up of volcanic rocks that have interacted with water.</div>\n",
+       " <div class=\"article_teaser_body\">The rover found that Jezero Crater’s floor is made up of volcanic rocks that have interacted with water.</div>\n",
        " </div>,\n",
        " <div class=\"list_text\">\n",
        " <div class=\"list_date\">August 5, 2022</div>\n",
@@ -167,11 +159,11 @@
        " <div class=\"list_text\">\n",
        " <div class=\"list_date\">August 4, 2022</div>\n",
        " <div class=\"content_title\">SAM's Top 5 Discoveries Aboard NASA's Curiosity Rover at Mars</div>\n",
-       " <div class=\"article_teaser_body\">âSelfieâ of the Curiosity rover with inset showing the SAM instrument prior to installation on the rover.</div>\n",
+       " <div class=\"article_teaser_body\">“Selfie” of the Curiosity rover with inset showing the SAM instrument prior to installation on the rover.</div>\n",
        " </div>]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,20 +182,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create an empty list to store the dictionaries\n",
-    "article_data = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "article_data = []\n",
+    "\n",
     "# Loop through the text elements\n",
     "for list_text_element in list_text_elements:\n",
     "    \n",
@@ -231,47 +216,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'title': \"SAM's Top 5 Discoveries Aboard NASA's Curiosity Rover at Mars\",\n",
-       "  'preview': 'â\\x80\\x9cSelfieâ\\x80\\x9d of the Curiosity rover with inset showing the SAM instrument prior to installation on the rover.'},\n",
-       " {'title': \"NASA's MAVEN Observes Martian Light Show Caused by Major Solar Storm\",\n",
-       "  'preview': 'For the first time in its eight years orbiting Mars, NASAâ\\x80\\x99s MAVEN mission witnessed two different types of ultraviolet aurorae simultaneously, the result of solar storms that began on Aug. 27.'},\n",
+       "[{'title': \"NASA's MAVEN Observes Martian Light Show Caused by Major Solar Storm\",\n",
+       "  'preview': 'For the first time in its eight years orbiting Mars, NASA’s MAVEN mission witnessed two different types of ultraviolet aurorae simultaneously, the result of solar storms that began on Aug. 27.'},\n",
        " {'title': \"NASA Prepares to Say 'Farewell' to InSight Spacecraft\",\n",
-       "  'preview': 'A closer look at what goes into wrapping up the mission as the spacecraftâ\\x80\\x99s power supply continues to dwindle.'},\n",
+       "  'preview': 'A closer look at what goes into wrapping up the mission as the spacecraft’s power supply continues to dwindle.'},\n",
        " {'title': 'NASA and ESA Agree on Next Steps to Return Mars Samples to Earth',\n",
-       "  'preview': 'The agencyâ\\x80\\x99s Perseverance rover will establish the first sample depot on Mars.'},\n",
+       "  'preview': 'The agency’s Perseverance rover will establish the first sample depot on Mars.'},\n",
        " {'title': \"NASA's InSight Lander Detects Stunning Meteoroid Impact on Mars\",\n",
-       "  'preview': 'The agencyâ\\x80\\x99s lander felt the ground shake during the impact while cameras aboard the Mars Reconnaissance Orbiter spotted the yawning new crater from space.'},\n",
+       "  'preview': 'The agency’s lander felt the ground shake during the impact while cameras aboard the Mars Reconnaissance Orbiter spotted the yawning new crater from space.'},\n",
        " {'title': 'NASA To Host Briefing on InSight, Mars Reconnaissance Orbiter Findings',\n",
        "  'preview': 'Scientists from two Mars missions will discuss how they combined images and data for a major finding on the Red Planet.'},\n",
        " {'title': 'Why NASA Is Trying To Crash Land on Mars',\n",
-       "  'preview': 'Like a carâ\\x80\\x99s crumple zone, the experimental SHIELD lander is designed to absorb a hard impact.'},\n",
+       "  'preview': 'Like a car’s crumple zone, the experimental SHIELD lander is designed to absorb a hard impact.'},\n",
        " {'title': 'Curiosity Mars Rover Reaches Long-Awaited Salty Region',\n",
-       "  'preview': 'After years of climbing, the Mars rover has arrived at a special region believed to have formed as Marsâ\\x80\\x99 climate was drying.'},\n",
+       "  'preview': 'After years of climbing, the Mars rover has arrived at a special region believed to have formed as Mars’ climate was drying.'},\n",
        " {'title': 'Mars Mission Shields Up for Tests',\n",
        "  'preview': 'Protecting Mars Sample Return spacecraft from micrometeorites requires high-caliber work.'},\n",
        " {'title': \"NASA's InSight Waits Out Dust Storm\",\n",
-       "  'preview': 'InSightâ\\x80\\x99s team is taking steps to help the solar-powered lander continue operating for as long as possible.'},\n",
+       "  'preview': 'InSight’s team is taking steps to help the solar-powered lander continue operating for as long as possible.'},\n",
        " {'title': \"NASA's InSight 'Hears' Its First Meteoroid Impacts on Mars\",\n",
-       "  'preview': 'The Mars landerâ\\x80\\x99s seismometer has picked up vibrations from four separate impacts in the past two years.'},\n",
+       "  'preview': 'The Mars lander’s seismometer has picked up vibrations from four separate impacts in the past two years.'},\n",
        " {'title': \"NASA's Perseverance Rover Investigates Geologically Rich Mars Terrain\",\n",
        "  'preview': 'The latest findings provide greater detail on a region of the Red Planet that has a watery past and is yielding promising samples for the NASA-ESA Mars Sample Return campaign.'},\n",
        " {'title': 'NASA to Host Briefing on Perseverance Mars Rover Mission Operations',\n",
-       "  'preview': 'Members of the mission will discuss the roverâ\\x80\\x99s activities as it gathers samples in an ancient river delta.'},\n",
+       "  'preview': 'Members of the mission will discuss the rover’s activities as it gathers samples in an ancient river delta.'},\n",
        " {'title': \"NASA's Perseverance Makes New Discoveries in Mars' Jezero Crater\",\n",
-       "  'preview': 'The rover found that Jezero Craterâ\\x80\\x99s floor is made up of volcanic rocks that have interacted with water.'},\n",
+       "  'preview': 'The rover found that Jezero Crater’s floor is made up of volcanic rocks that have interacted with water.'},\n",
        " {'title': \"10 Years Since Landing, NASA's Curiosity Mars Rover Still Has Drive\",\n",
        "  'preview': 'Despite signs of wear, the intrepid spacecraft is about to start an exciting new chapter of its mission as it climbs a Martian mountain.'},\n",
        " {'title': \"SAM's Top 5 Discoveries Aboard NASA's Curiosity Rover at Mars\",\n",
-       "  'preview': 'â\\x80\\x9cSelfieâ\\x80\\x9d of the Curiosity rover with inset showing the SAM instrument prior to installation on the rover.'}]"
+       "  'preview': '“Selfie” of the Curiosity rover with inset showing the SAM instrument prior to installation on the rover.'}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +266,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export the dictionary to a JSON file\n",
+    "with open('article_data.json', 'w') as json_file:\n",
+    "    json.dump(article_data, json_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
