--- a/MarsPy/mars_news.ipynb
+++ b/MarsPy/mars_news.ipynb
@@ -169,7 +169,7 @@
     }
    ],
    "source": [
-    "# Check out the list_text_elements\n",
+    "# View the list_text_elements\n",
     "list_text_elements"
    ]
   },
@@ -270,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Export the dictionary to a JSON file with special formatting \n",
+    "# Export the dictionaries to a JSON file with special formatting \n",
     "with open('news_data.json', 'w', encoding='utf-8') as json_file:\n",
     "    json.dump(article_data, json_file, ensure_ascii=False, indent=4)"
    ]
@@ -281,6 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Close the browser\n",
     "browser.quit()"
    ]
   }
