--- a/MarsPy/mars_weather.ipynb
+++ b/MarsPy/mars_weather.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,15 +18,12 @@
     "from bs4 import BeautifulSoup as soup\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -133,19 +130,19 @@
        "['id', 'terrestrial_date', 'sol', 'ls', 'month', 'min_temp', 'pressure']"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# check the column names\n",
+    "# Check the column names\n",
     "column_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1151,7 @@
        " ...]"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1270,7 @@
        "4  46       2012-08-20  14  157     6    -74.0    740.0"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1305,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1353,13 +1350,13 @@
        "dtype: object"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Confirm type changes were successful by examining data types again\n",
+    "# Confirm data type changes were successful by examining data types again\n",
     "changed_data_types = mars_weather_df.dtypes\n",
     "changed_data_types"
    ]
@@ -1370,24 +1367,12 @@
    "source": [
     "### Step 5: Analyze the Data\n",
     "\n",
-    "Analyze your dataset by using Pandas functions to answer the following questions:\n",
-    "\n",
-    "1. How many months exist on Mars?\n",
-    "2. How many Martian (and not Earth) days worth of data exist in the scraped dataset?\n",
-    "3. What are the coldest and the warmest months on Mars (at the location of Curiosity)? To answer this question:\n",
-    "    * Find the average the minimum daily temperature for all of the months.\n",
-    "    * Plot the results as a bar chart.\n",
-    "4. Which months have the lowest and the highest atmospheric pressure on Mars? To answer this question:\n",
-    "    * Find the average the daily atmospheric pressure of all the months.\n",
-    "    * Plot the results as a bar chart.\n",
-    "5. About how many terrestrial (Earth) days exist in a Martian year? To answer this question:\n",
-    "    * Consider how many days elapse on Earth in the time that Mars circles the Sun once.\n",
-    "    * Visually estimate the result by plotting the daily minimum temperature.\n"
+    "Analyze the dataset by using Pandas functions to answer the specified questions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1394,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1424,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1458,12 +1443,13 @@
     "unique_sols = mars_weather_df['sol'].unique()\n",
     "num_martian_days = len(unique_sols)\n",
     "\n",
+    "# Print the answer to the question  \n",
     "print(f\"There are {num_martian_days} Martian days worth of data.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1485,21 +1471,25 @@
        "Name: min_temp, dtype: float64"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 3. What is the average low temperature by month?\n",
+    "\n",
+    "# Use Pandas to group the data by month and calculate the average min temperature\n",
     "ave_temp_by_month = mars_weather_df.groupby('month')['min_temp'].mean() \n",
     "ave_temp_by_month = mars_weather_df.groupby('month')['min_temp'].mean() \n",
+    "\n",
+    "# Display the average min temperature by month\n",
     "ave_temp_by_month"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1514,16 +1504,16 @@
     }
    ],
    "source": [
+    "# Plot the average min temperature by month\n",
     "ave_temp_by_month.sort_index(inplace=True)\n",
     "ave_temp_by_month.plot(kind='bar')\n",
-    "\n",
     "plt.ylabel('Temperature in Celsius')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1538,6 +1528,7 @@
     }
    ],
    "source": [
+    "# Sort the bars \n",
     "ave_temp_by_month.sort_values(inplace=True)\n",
     "ave_temp_by_month.plot(kind='bar')  \n",
     "plt.ylabel('Temperature in Celsius')\n",
@@ -1546,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1561,12 +1552,14 @@
     "# Identify the coldest and hottest months in Curiosity's location\n",
     "coldest_month = ave_temp_by_month.idxmin()\n",
     "hottest_month = ave_temp_by_month.idxmax()\n",
+    "\n",
+    "# Print the answer \n",
     "print(f'The coldest month is {coldest_month} and the hottest month is {hottest_month}.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1581,7 @@
        "Name: pressure, dtype: float64"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1601,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1620,19 +1613,20 @@
     "ave_pressr_by_month.sort_values(ascending=True, inplace=True)\n",
     "ave_pressr_graph = ave_pressr_by_month.plot(kind='bar', title = \"Average Pressure by Month\", \n",
     "                        figsize=(12, 8), fontsize=12)\n",
-    "plt.ylabel(\"Atmospheric Pressure\"); # use semi-colon to suppress unwanted matplotlib output"
+    "plt.ylabel(\"Atmospheric Pressure\")\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The month with the lowest atmospheric pressure is 6 \n",
+      "The month with the lowest atmospheric pressure is 6. \n",
       "The month with the highest atmospheric pressure is 9.\n"
      ]
     }
@@ -1641,12 +1635,14 @@
     "# Which months have the lowest and the highest atmospheric pressure on Mars? \n",
     "lowest_month_pressr = ave_pressr_by_month.idxmin()\n",
     "highest_month_pressr = ave_pressr_by_month.idxmax()\n",
-    "print(f'The month with the lowest atmospheric pressure is {lowest_month_pressr} \\nThe month with the highest atmospheric pressure is {highest_month_pressr}.')"
+    "\n",
+    "# Print the answer\n",
+    "print(f'The month with the lowest atmospheric pressure is {lowest_month_pressr}. \\nThe month with the highest atmospheric pressure is {highest_month_pressr}.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1661,7 +1657,7 @@
     }
    ],
    "source": [
-    "# Group by 'sol' and find the minimum 'min_temp' for each 'sol'\n",
+    "# Group by 'sol' and find the lowest 'min_temp' for each 'sol'\n",
     "min_temp_by_sol = mars_weather_df.groupby('sol')['min_temp'].min()\n",
     "\n",
     "# Create the line graph\n",
@@ -1691,7 +1687,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The distance from peak to peak is roughly 1425-750, or 675 days. A year on Mars appears to be about 675 days from the plot. Internet search confirms that a Mars year is equivalent to 687 earth days."
+    "It is useful to consider the time it takes to complete one cycle, such as the distance from peak to peak, which can be estimated as 1425-750, or 675 days. A year on Mars appears to be about 675 days, based on the plot. Internet search confirms that a Mars year is equivalent to 687 earth days.\n",
+    "\n",
+    "<img src=\"mars_year.png\" width=\"1000\">"
    ]
   },
   {
@@ -1705,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1715,167 +1713,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>terrestrial_date</th>\n",
-       "      <th>sol</th>\n",
-       "      <th>ls</th>\n",
-       "      <th>month</th>\n",
-       "      <th>min_temp</th>\n",
-       "      <th>pressure</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2012-08-16</td>\n",
-       "      <td>10</td>\n",
-       "      <td>155</td>\n",
-       "      <td>6</td>\n",
-       "      <td>-75.0</td>\n",
-       "      <td>739.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>13</td>\n",
-       "      <td>2012-08-17</td>\n",
-       "      <td>11</td>\n",
-       "      <td>156</td>\n",
-       "      <td>6</td>\n",
-       "      <td>-76.0</td>\n",
-       "      <td>740.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>24</td>\n",
-       "      <td>2012-08-18</td>\n",
-       "      <td>12</td>\n",
-       "      <td>156</td>\n",
-       "      <td>6</td>\n",
-       "      <td>-76.0</td>\n",
-       "      <td>741.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>35</td>\n",
-       "      <td>2012-08-19</td>\n",
-       "      <td>13</td>\n",
-       "      <td>157</td>\n",
-       "      <td>6</td>\n",
-       "      <td>-74.0</td>\n",
-       "      <td>732.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>46</td>\n",
-       "      <td>2012-08-20</td>\n",
-       "      <td>14</td>\n",
-       "      <td>157</td>\n",
-       "      <td>6</td>\n",
-       "      <td>-74.0</td>\n",
-       "      <td>740.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id terrestrial_date  sol   ls  month  min_temp  pressure\n",
-       "0   2       2012-08-16   10  155      6     -75.0     739.0\n",
-       "1  13       2012-08-17   11  156      6     -76.0     740.0\n",
-       "2  24       2012-08-18   12  156      6     -76.0     741.0\n",
-       "3  35       2012-08-19   13  157      6     -74.0     732.0\n",
-       "4  46       2012-08-20   14  157      6     -74.0     740.0"
-      ]
-     },
-     "execution_count": 202,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mars_weather_df.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 203,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-77.0    138\n",
-       "-76.0    133\n",
-       "-79.0    129\n",
-       "-80.0    118\n",
-       "-71.0    117\n",
-       "-78.0    114\n",
-       "-74.0    112\n",
-       "-75.0    111\n",
-       "-73.0    111\n",
-       "-72.0    102\n",
-       "-70.0     79\n",
-       "-85.0     71\n",
-       "-81.0     67\n",
-       "-84.0     63\n",
-       "-69.0     59\n",
-       "-82.0     57\n",
-       "-86.0     49\n",
-       "-68.0     49\n",
-       "-67.0     34\n",
-       "-65.0     32\n",
-       "-66.0     31\n",
-       "-83.0     30\n",
-       "-87.0     30\n",
-       "-88.0     15\n",
-       "-64.0      9\n",
-       "-63.0      3\n",
-       "-89.0      2\n",
-       "-90.0      1\n",
-       "-62.0      1\n",
-       "Name: min_temp, dtype: int64"
-      ]
-     },
-     "execution_count": 203,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mars_weather_df.min_temp.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Close the browser\n",
     "browser.quit()"
    ]
   }
